feat: correcoes e testes de rotas
